Bug 30333 - DXT compressed SRGB textures cause assert failure
Summary: DXT compressed SRGB textures cause assert failure
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: mesa-dev
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-22 13:30 UTC by Thomas Jones
Modified: 2010-09-24 06:56 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Thomas Jones 2010-09-22 13:30:11 UTC
If a SRGB compressed format is chosen as the internal format of a texture that is not already compressed the compression will cause an assertion fail in a debug build of mesa because the assert is too narrow, it should accept sRGB compressed destination formats as well.

main/texcompress_s3tc.c:170: _mesa_texstore_rgb_dxt1: Assertion `dstFormat == MESA_FORMAT_RGB_DXT1' failed.
Comment 1 Brian Paul 2010-09-24 06:56:25 UTC
Fixed with commit 9f7c8053e06663ba1f7b105f987052d9412d8fad


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.